<resources>

    <string name="app_name">MyDogTrackerManager</string>

    // Default
    <string name="btnOk">Validate</string>

    // Launch Activity
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgetpass">Forget password ?</string>
    <string name="wronglogs">Wrong e-mail or password, please try again.</string>
    <string name="noemail">You need an e-mail, please try again.</string>
    <string name="nopass">You need a password, please try again.</string>
    <string name="emailsent">Please check your e-mails for password.</string>

    // Main Activity


    // Register Activity
    <string name="name">Name :</string>
    <string name="firstname">Firstname :</string>
    <string name="emailReg">E-mail :</string>
    <string name="passReg">Password :</string>
    <string name="passConfReg">Confirm Pass :</string>
    <string name="errorbdd">An error has occurred, please retry later !</string>

    // List Activity
    <string name="addSpy">Add a spy</string>


    // Map Activity


    // Network Error Dialog
    <string name="network_needed">Network needed</string>
    <string name="error_connectivity">This app needs to be connected to work as it is designed to, would you like to access settings ?</string>
    <string name="settings">Settings</string>
    <string name="out">Exit</string>
    <string name="title_activity_maps">Map</string>

</resources>
