<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginTop="64dp"
        android:text="@string/name"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <TextView
        android:id="@+id/tvFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/firstname"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <EditText
        android:id="@+id/etFirstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvFirstname"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/emailReg"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvFirstname" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvEmail"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/passReg"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPassword"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <TextView
        android:id="@+id/tvPassConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/passConfReg"
        app:layout_constraintEnd_toStartOf="@+id/guideline5"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <EditText
        android:id="@+id/etPassConf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvPassConfirm"
        app:layout_constraintStart_toStartOf="@+id/guideline5" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btnOk"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassConf" />
</android.support.constraint.ConstraintLayout>
